# Agentic-Sync-Coordinator

./: .gitignore  README.md
Backend/: .env.example  main.py  pyproject.toml
Frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
Frontend/src/: App.tsx  index.css
Frontend/src/components/: ChatHeader.tsx  ChatMessage.tsx  MessageInput.tsx  ProtectedRoute.tsx  ToolCallDisplay.tsx
Frontend/src/components/ui/: spinner.tsx
Frontend/src/hooks/: useVoiceRecognition.ts
Frontend/src/lib/: api.ts  auth.ts
Frontend/src/pages/: Chat.tsx  Landing.tsx
Frontend/src/types/: speech-recognition.d.ts
