[project]
name = "llm-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.1",
    "fastmcp>=2.12.4",
    "google-genai>=1.46.0",
    "nest-asyncio>=1.6.0",
    "requests>=2.32.5",
]
